--- a/waybar/config
+++ b/waybar/config
@@ -44,7 +44,7 @@
     "scroll-step": 5,
     "format": "{icon} {volume}%",
     "format-muted": "{icon} {volume}%",
-    "on-click": "pactl set-sink-mute @DEFAULT_SINK@ toggle",
+    "on-click": "pavucontrol",
     "format-icons": {
       "default": ["", "", ""]
     }
